crates/aranya-policy-compiler/tests/data/match_stmt/duplicate_default_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: duplicate match patterns found
  |
4 |         _ => {}
  |         - first defined here
5 |         _ => {}
  |         ^ duplicate pattern
